--- a/Servlet/src/main/webapp/WEB-INF/web.xml
+++ b/Servlet/src/main/webapp/WEB-INF/web.xml
@@ -88,8 +88,15 @@
 <listener>
 <listener-class>com.Basic.RequestIistner</listener-class>
 </listener>
+<filter>
+<filter-name>samplefilter</filter-name>
+<filter-class>com.Filter.FilterClass</filter-class>
 
-
+</filter>
+<filter-mapping>
+<filter-name>samplefilter</filter-name>
+<url-pattern>/add</url-pattern>
+</filter-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
